se termina notebook con RAG, funcionando correctamente

--- a/RAG_PDFs.ipynb
+++ b/RAG_PDFs.ipynb
@@ -376,158 +376,91 @@
     {
       "cell_type": "code",
       "source": [
-        "system_propmt = (\n",
-        "    'Eres un asistente que devuelve informacion de pdfs, ademas incluye emojis a cada una de las respuestas. Tienes el siguiente contexto {}'\n",
-        ")"
-      ],
-      "metadata": {
-        "id": "Umk2lBDsP2yb"
-      },
-      "execution_count": 27,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "from langchain_openai import ChatOpenAI"
-      ],
-      "metadata": {
-        "id": "LQwFXww-QLrT"
-      },
-      "execution_count": 28,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
+        "# Mantener las importaciones y configuración inicial...\n",
+        "\n",
+        "from langchain_core.prompts import PromptTemplate, ChatPromptTemplate, MessagesPlaceholder\n",
+        "from langchain_openai import ChatOpenAI\n",
+        "from langchain.chains import create_history_aware_retriever, create_retrieval_chain\n",
+        "from langchain_core.chat_history import BaseChatMessageHistory\n",
+        "from langchain_core.runnables import RunnableWithMessageHistory\n",
+        "from langchain_community.chat_message_histories import ChatMessageHistory\n",
+        "\n",
+        "# Configurar el LLM\n",
         "llm = ChatOpenAI(\n",
-        "    model_name='gpt-3.5-turbo',\n",
+        "    model_name='gpt-4o',\n",
         "    temperature=0,\n",
         "    max_tokens=150\n",
-        ")"
-      ],
-      "metadata": {
-        "id": "uvBUOQcTQTzw"
-      },
-      "execution_count": 30,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "from langchain_core.prompts import PromptTemplate, ChatPromptTemplate, MessagesPlaceholder\n",
-        "from langchain.chains import create_history_aware_retriever, create_retrieval_chain"
-      ],
-      "metadata": {
-        "id": "MaRSbNIpkG7x"
-      },
-      "execution_count": 31,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "contextualize_q_system_prompt = (\n",
-        "    'Responde segun el historial de chat y la ultima pregunta del usuario'\n",
-        "    'si no está en el historial de chat o en el contexto no respondas'\n",
-        "    'Ademas responde de manera profesional a la pregunta y siempre responde en español'\n",
-        ")"
-      ],
-      "metadata": {
-        "id": "FiCP3YdElDzX"
-      },
-      "execution_count": 32,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "contextualize_q_prompt = ChatPromptTemplate.from_messages(\n",
-        "    [\n",
-        "        ('system', contextualize_q_system_prompt),\n",
-        "        MessagesPlaceholder(variable_name='chat_history'),\n",
-        "        ('human', '{input}')\n",
-        "    ]\n",
-        ")"
-      ],
-      "metadata": {
-        "id": "LcDHEHavmKRx"
-      },
-      "execution_count": 34,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "history_aware_retriever = create_history_aware_retriever(\n",
-        "    llm,\n",
+        ")\n",
+        "\n",
+        "# Definir el prompt del sistema\n",
+        "system_prompt = (\n",
+        "    'Eres un asistente que devuelve informacion de pdfs, ademas incluye emojis a cada una de las respuestas. '\n",
+        "    'Utiliza el siguiente contexto para responder: {context}'\n",
+        "    'No respondas si la informacion no esta dentro de los documentos pdf que se estan leyendo'\n",
+        ")\n",
+        "\n",
+        "# Crear el prompt para el QA\n",
+        "qa_prompt = ChatPromptTemplate.from_messages([\n",
+        "    (\"system\", system_prompt),\n",
+        "    MessagesPlaceholder(variable_name=\"chat_history\"),\n",
+        "    (\"human\", \"{input}\")\n",
+        "])\n",
+        "\n",
+        "# Crear la cadena de documentos\n",
+        "from langchain.chains.combine_documents import create_stuff_documents_chain\n",
+        "\n",
+        "document_chain = create_stuff_documents_chain(\n",
+        "    llm=llm,\n",
+        "    prompt=qa_prompt,\n",
+        "    document_variable_name=\"context\"\n",
+        ")\n",
+        "\n",
+        "# Crear la cadena de recuperación\n",
+        "retrieval_chain = create_retrieval_chain(\n",
         "    retriever,\n",
-        "    contextualize_q_prompt\n",
-        ")"
-      ],
-      "metadata": {
-        "id": "R1F2l6JNmwfF"
-      },
-      "execution_count": 35,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "from langchain.chains.combine_documents import create_stuff_documents_chain"
-      ],
-      "metadata": {
-        "id": "lcPKNbvCncak"
-      },
-      "execution_count": 36,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "qa_prompt = ChatPromptTemplate.from_messages(\n",
-        "    [\n",
-        "        ('system', system_propmt),\n",
-        "        MessagesPlaceholder(variable_name='chat_history'),\n",
-        "        ('human', '{input}')\n",
-        "    ]\n",
-        ")"
-      ],
-      "metadata": {
-        "id": "JnA3Ngrhnv3P"
-      },
-      "execution_count": 40,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "question_answer_chain = create_stuff_documents_chain(\n",
-        "    llm,\n",
-        "    qa_prompt\n",
-        ")"
+        "    document_chain\n",
+        ")\n",
+        "\n",
+        "# Configurar el historial\n",
+        "store = {}\n",
+        "\n",
+        "def get_session_history(session_id: str) -> BaseChatMessageHistory:\n",
+        "    if session_id not in store:\n",
+        "        store[session_id] = ChatMessageHistory()\n",
+        "    return store[session_id]\n",
+        "\n",
+        "# Crear la cadena RAG conversacional\n",
+        "conversational_rag_chain = RunnableWithMessageHistory(\n",
+        "    retrieval_chain,\n",
+        "    get_session_history,\n",
+        "    input_messages_key=\"input\",\n",
+        "    history_messages_key=\"chat_history\",\n",
+        "    output_messages_key=\"answer\"\n",
+        ")\n",
+        "\n",
+        "# Ejecutar la consulta\n",
+        "response = conversational_rag_chain.invoke(\n",
+        "    {\"input\": \"Qué me puedes decir de la industria insuretech en mexico\"},\n",
+        "    config={\"configurable\": {\"session_id\": \"abc123\"}}\n",
+        ")\n",
+        "print(response[\"answer\"])"
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 333
+          "base_uri": "https://localhost:8080/"
         },
-        "id": "Efd2Nq1UoQUa",
-        "outputId": "a82ebd28-cc1b-4d49-c88d-3773d6814a9d"
+        "id": "1jHz9k101InJ",
+        "outputId": "4f707a7c-97c1-4cc2-fac4-df5af480c7c0"
       },
-      "execution_count": 41,
+      "execution_count": 98,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "ValueError",
-          "evalue": "Prompt must accept context as an input variable. Received prompt with input variables: ['', 'chat_history', 'input']",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-41-7682ce854168>\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m question_answer_chain = create_stuff_documents_chain(\n\u001b[0m\u001b[1;32m      2\u001b[0m     \u001b[0mllm\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0mqa_prompt\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m )\n",
-            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/langchain/chains/combine_documents/stuff.py\u001b[0m in \u001b[0;36mcreate_stuff_documents_chain\u001b[0;34m(llm, prompt, output_parser, document_prompt, document_separator, document_variable_name)\u001b[0m\n\u001b[1;32m     77\u001b[0m     \"\"\"  # noqa: E501\n\u001b[1;32m     78\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 79\u001b[0;31m     \u001b[0m_validate_prompt\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mprompt\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdocument_variable_name\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     80\u001b[0m     \u001b[0m_document_prompt\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdocument_prompt\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0mDEFAULT_DOCUMENT_PROMPT\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     81\u001b[0m     \u001b[0m_output_parser\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0moutput_parser\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0mStrOutputParser\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/langchain/chains/combine_documents/base.py\u001b[0m in \u001b[0;36m_validate_prompt\u001b[0;34m(prompt, document_variable_name)\u001b[0m\n\u001b[1;32m     25\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0m_validate_prompt\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mprompt\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mBasePromptTemplate\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdocument_variable_name\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m->\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     26\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mdocument_variable_name\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mprompt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minput_variables\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 27\u001b[0;31m         raise ValueError(\n\u001b[0m\u001b[1;32m     28\u001b[0m             \u001b[0;34mf\"Prompt must accept {document_variable_name} as an input variable. \"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     29\u001b[0m             \u001b[0;34mf\"Received prompt with input variables: {prompt.input_variables}\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mValueError\u001b[0m: Prompt must accept context as an input variable. Received prompt with input variables: ['', 'chat_history', 'input']"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "La industria insurtech en México está experimentando un crecimiento significativo, impulsado por la innovación tecnológica en el sector asegurador. 🚀 Las insurtechs están transformando la manera en que se diseñan, venden y gestionan los seguros, ofreciendo soluciones más personalizadas y accesibles para los consumidores. Sin embargo, también enfrentan retos como la regulación y la necesidad de generar confianza entre los usuarios. 🤝\n",
+            "\n",
+            "Además, las insurtechs tienen la oportunidad de colaborar con las fintechs para crear productos financieros más integrados y eficientes, lo que podría revolucionar el mercado asegurador en México. 🌟\n"
           ]
         }
       ]
